--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,22 @@
   color: #b2bbff;
 }
 
+.question__icon {
+  color: #e7eaee;
+  width: 14px;
+  height: 16px;
+  transition-duration: 300ms;
+}
+.question__icon.open {
+  transform: rotateZ(45deg);
+}
+
+@media screen and (max-width: 960px) {
+  .logo img {
+    width: 85px;
+    height: 32px;
+  }
+}
 .header {
   display: flex;
   flex-direction: row;
@@ -101,7 +117,7 @@
   flex-direction: row;
   gap: 0.4rem;
   align-items: center;
-  font-size: 1rem;
+  font-size: 1.125rem;
   font-weight: 700;
   text-align: center;
   line-height: 1.25rem;
@@ -132,6 +148,145 @@
   .header {
     height: 56px;
     padding: 1rem;
+  }
+}
+.faq {
+  display: flex;
+  flex-direction: row;
+  gap: 5rem;
+  align-items: flex-start;
+  justify-content: space-between;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 1.875rem 2.5rem;
+}
+.faq__img img {
+  width: 327px;
+  height: 764px;
+  max-width: none;
+}
+.faq__right {
+  width: 100%;
+  max-width: 750px;
+  color: #e7eaee;
+}
+.faq__right__upperheading {
+  font-size: 1rem;
+  font-weight: 400;
+  font-style: italic;
+  margin: 0 0 0.25rem 0;
+}
+.faq__right__heading {
+  font-size: 2.5rem;
+  font-weight: 800;
+  line-height: 1;
+  text-transform: uppercase;
+  margin: 0 0 1.5rem 0;
+}
+.faq__right__label {
+  font-size: 1.125rem;
+  line-height: 1.4;
+  margin: 0 0 1.125rem 0;
+}
+
+.faq__list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+.question {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem 1rem;
+  background-color: #3a3c43;
+  border: 1px solid #64748b;
+  cursor: pointer;
+  border-radius: 0.25rem;
+  font-weight: 500;
+}
+.question__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.question:hover {
+  background-color: #303238;
+}
+.question__label {
+  max-width: 800px;
+  color: #e7eaee;
+  margin: 0;
+  overflow-wrap: break-word;
+  white-space: normal;
+  line-height: 1;
+}
+.question__icon {
+  flex-shrink: 0;
+}
+
+.answer {
+  overflow: hidden;
+  max-height: 0;
+  opacity: 0;
+  transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out 0.1s;
+}
+.answer.open {
+  max-height: 1000px;
+  opacity: 1;
+  transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+.answer p {
+  margin: 0 0 1rem 0;
+  line-height: 1.2;
+}
+
+@media screen and (min-width: 320px) and (max-width: 600px) {
+  .faq {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+    align-items: center;
+    padding: 1.875rem 1rem;
+  }
+  .faq__img {
+    height: 350px;
+    overflow: hidden;
+  }
+  .faq__img img {
+    width: 250px;
+    height: 584px;
+  }
+  .faq__right__upperheading {
+    font-size: 0.75rem;
+    text-align: center;
+  }
+  .faq__right__heading {
+    font-size: 1.75rem;
+    text-align: center;
+  }
+  .faq__right__label {
+    font-size: 1rem;
+  }
+}
+@media screen and (min-width: 600px) and (max-width: 960px) {
+  .faq {
+    padding: 1.875rem 1rem;
+    gap: 2rem;
+  }
+  .faq__img img {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .faq {
+    padding: 1.875rem 5rem;
+    gap: 10rem;
   }
 }
 .footer {
@@ -296,7 +451,7 @@ body {
 
 .main__page {
   background: url(/public/sparkle-bg.png);
-  height: 100%;
+  height: fit-content;
 }
 
 :focus {
