--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -8,4 +8,6 @@ $purple: #b2bbff;
 
 // ADDITIONAL VARIABLES
 $headerGradient: rgba(0, 0, 0, 0.9);
-$input-bg: #3a3c43;
+$gray-bg: #3a3c43;
+$darker-gray-bg: #303238;
+$gray-border: #64748b;
