--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -11,3 +11,4 @@ $headerGradient: rgba(0, 0, 0, 0.9);
 $gray-bg: #3a3c43;
 $darker-gray-bg: #303238;
 $gray-border: #64748b;
+$about-mobile-bg: #272a31;
