--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,7 @@
 @import "./modules/iconsStyles";
 
 @import "./modules/header";
+@import "./modules/about";
 @import "./modules/faq";
 @import "./modules/footer";
 
