--- a/scss/mixins/_flex.scss
+++ b/scss/mixins/_flex.scss
@@ -1,4 +1,4 @@
-@mixin flex($direction, $gap: null, $align: null, $justify: null) {
+@mixin flex($direction, $gap: null, $align: null, $justify: null, $wrap: null) {
   display: flex;
   flex-direction: $direction;
   @if $gap != null {
@@ -9,5 +9,8 @@
   }
   @if $justify != null {
     justify-content: $justify;
+  }
+  @if $wrap != null {
+    flex-wrap: wrap;
   }
 }
