feat(blog): added blog block; feat(contact): added contact block; feat(AboutAnimation): added console.warn if there are no target elements; feat(ContactAnmation): added animation to image from contact block;

--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -1,6 +1,7 @@
 // MAIN COLORS
 $white: #e7eaee;
 $black: #000000;
+$light-gray: #b8c0cc;
 $gray: #5e5e5e;
 $dark-gray: #424242;
 $dark-blue: #181c23;
