--- a/scss/modules/_about.scss
+++ b/scss/modules/_about.scss
@@ -4,9 +4,11 @@
   max-width: 1440px;
   margin: 0 auto;
   height: 680px;
+  position: relative;
 
   &__img {
     @include size($w: 100%, $h: 100%);
+    position: relative;
     z-index: 0;
     max-width: 580px;
     background-image: url(/public/imgs/cat.webp);
