--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,9 @@
 
 @import "./modules/header";
 @import "./modules/about";
+@import "./modules/blog";
 @import "./modules/pack";
+@import "./modules/contact";
 @import "./modules/faq";
 @import "./modules/footer";
 
