--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -13,3 +13,5 @@ $gray-bg: #3a3c43;
 $darker-gray-bg: #303238;
 $gray-border: #64748b;
 $about-mobile-bg: #272a31;
+$bg-mobile-nav: #212935;
+$bg-mobile-page: #000c;
