--- a/css/style.css
+++ b/css/style.css
@@ -80,12 +80,21 @@
   transform: rotateZ(45deg);
 }
 
+.controls__button__img {
+  width: 16px;
+  height: 16px;
+}
+
 @media screen and (max-width: 960px) {
   .logo img {
     width: 85px;
     height: 32px;
   }
 }
+.platform__icon {
+  color: #e7eaee;
+}
+
 .header {
   display: flex;
   flex-direction: row;
@@ -201,13 +210,13 @@
 }
 
 .bg__mobile {
+  width: 100%;
+  height: 100%;
   display: none;
   background-color: rgba(0, 0, 0, 0.8);
-  height: 100%;
-  left: 0;
   position: fixed;
+  left: 0;
   top: 0;
-  width: 100%;
   z-index: 199;
 }
 .bg__mobile.open {
@@ -234,6 +243,343 @@
 @media screen and (min-width: 960px) {
   .nav__mobile {
     visibility: hidden;
+  }
+}
+.modal {
+  width: 100%;
+  height: 100%;
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  overflow-y: auto;
+}
+.modal__content {
+  color: #e7eaee;
+  position: relative;
+  background: #292c33;
+  width: 92%;
+  max-width: 400px;
+  margin: 8vh auto;
+  padding: 2rem;
+  border-radius: 12px;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+}
+.modal__content h2 {
+  font-size: clamp(1.2rem, 2vw, 1.6rem);
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 1.5rem;
+  text-transform: uppercase;
+}
+.modal__content form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.modal__content label {
+  font-size: clamp(0.9rem, 1.5vw, 1rem);
+  font-weight: 600;
+}
+.modal__content input {
+  padding: 0.65rem;
+  font-size: clamp(0.95rem, 1.4vw, 1.05rem);
+  border: 1px solid #b8c0cc;
+  border-radius: 6px;
+}
+.modal__content button[type=submit] {
+  font-size: clamp(1rem, 1.6vw, 1.1rem);
+  font-weight: 900;
+  color: #000000;
+  margin-top: 1rem;
+  padding: 0.8rem;
+  background: linear-gradient(90deg, #9ca7fe, #c0c7ff);
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.modal__content button[type=submit]:hover {
+  box-shadow: 0px 0px 20px 10px rgba(178, 187, 255, 0.5);
+}
+.modal__close {
+  position: absolute;
+  top: 0.75rem;
+  right: 1rem;
+  font-size: clamp(1.5rem, 3vw, 2rem);
+  color: #e7eaee;
+  cursor: pointer;
+  line-height: 1;
+}
+
+.carousel {
+  display: flex;
+  flex-direction: row;
+  gap: 1.25rem;
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+  margin: 32px 0;
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
+  scrollbar-width: none;
+}
+.carousel__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+}
+.carousel__item {
+  width: 88vw;
+  height: 100%;
+  position: relative;
+  aspect-ratio: 2.2;
+  border-radius: 16px;
+  flex-shrink: 0;
+  max-width: 1280px;
+  overflow: hidden;
+  scroll-snap-align: center;
+}
+.carousel__item:first-child {
+  margin-left: 6vw;
+}
+.carousel__item:last-child {
+  margin-right: 6vw;
+}
+.carousel__item .jbg, .carousel__item .survey, .carousel__item .np, .carousel__item .mega, .carousel__item .vid-mobile {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 0;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.carousel__item .jbg-mobile, .carousel__item .survey-mobile, .carousel__item .np-mobile, .carousel__item .mega-mobile {
+  width: 100%;
+  height: 100%;
+  display: none;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.carousel__item .survey__overlay, .carousel__item .np__overlay, .carousel__item .mega__overlay {
+  display: flex;
+  flex-direction: column;
+  gap: 1.125rem;
+  align-items: center;
+  justify-content: center;
+  max-width: 340px;
+  position: absolute;
+  inset: 0;
+  z-index: 10;
+  margin: 0 5rem;
+}
+.carousel__item .vid__overlay {
+  display: flex;
+  flex-direction: column;
+  gap: 1.125rem;
+  align-items: center;
+  justify-content: center;
+  max-width: 500px;
+  position: absolute;
+  inset: 0;
+  z-index: 10;
+  padding: 0 5rem;
+}
+.carousel__item .survey, .carousel__item .np, .carousel__item .mega, .carousel__item .survey-mobile, .carousel__item .np-mobile, .carousel__item .mega-mobile, .carousel__item .vid-mobile {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.carousel__item .vid__overlay {
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6) 80%, transparent);
+}
+.carousel__item .jbg {
+  background-image: url("/public/carousel/1.webp");
+}
+.carousel__item .survey {
+  background-image: linear-gradient(-90deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("/public/carousel/2.webp");
+}
+.carousel__item .np {
+  background-image: linear-gradient(-90deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("/public/carousel/3.webp");
+}
+.carousel__item .mega {
+  background-image: linear-gradient(-90deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("/public/carousel/4.webp");
+}
+.carousel__item .jbg-mobile {
+  display: none;
+  background-image: url("/public/carousel/1-mobile.webp");
+}
+.carousel__item .survey-mobile {
+  display: none;
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("/public/carousel/2-mobile.webp");
+}
+.carousel__item .np-mobile {
+  display: none;
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("/public/carousel/3-mobile.webp");
+}
+.carousel__item .mega-mobile {
+  display: none;
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("/public/carousel/4-mobile.webp");
+}
+.carousel__item .vid-mobile {
+  display: none;
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("/public/carousel/5-mobile.webp");
+}
+
+.controls {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+.controls__button {
+  margin: 0 1.25rem;
+  opacity: 0.4;
+  cursor: pointer;
+}
+.controls__button.left {
+  transform: scaleX(-1);
+}
+.controls__button.active {
+  opacity: 1;
+}
+.controls__dot {
+  width: 15px;
+  height: 15px;
+  background-color: #71768e;
+  border-radius: 50%;
+  cursor: pointer;
+  display: inline-block;
+  transition: all 0.1s ease-out;
+}
+.controls__dot.active {
+  background-color: #b2bbff;
+  filter: drop-shadow(0 0 7.452px #b2bbff);
+}
+
+.platform {
+  display: flex;
+  flex-direction: row;
+  gap: 0.75rem;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.overlay__button {
+  font-size: 1rem;
+  font-weight: 800;
+  text-align: left;
+  line-height: 1rem;
+  display: flex;
+  flex-direction: row;
+  gap: 0;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  font-family: "Inter";
+  width: 100%;
+  background: linear-gradient(90deg, #9ca7fe, #c0c7ff);
+  border: none;
+  border-radius: 4px;
+  color: #000000;
+  cursor: pointer;
+  padding: 1rem;
+  transition-duration: 0.1s;
+}
+.overlay__button:hover {
+  box-shadow: 0px 0px 20px 10px rgba(178, 187, 255, 0.5);
+}
+
+.overlay__img {
+  max-height: 200px;
+}
+
+@media screen and (min-width: 1680px) {
+  .carousel__item:first-child {
+    margin-left: 25%;
+  }
+  .carousel__item:last-child {
+    margin-right: 25%;
+  }
+  .inactive {
+    opacity: 0.3;
+    scale: 90%;
+  }
+}
+@media screen and (max-width: 960px) and (min-width: 600px) {
+  .carousel__item {
+    aspect-ratio: 2;
+    min-height: 320px;
+  }
+  .carousel__item .survey__overlay, .carousel__item .np__overlay, .carousel__item .mega__overlay {
+    width: clamp(220px, 35vw, 320px);
+    margin: auto 40px;
+  }
+  .carousel__item .vid__overlay {
+    width: clamp(220px, 45vw, 350px);
+    margin: 0;
+    padding: 0 1.25rem;
+  }
+  .platform {
+    gap: 0.5rem;
+  }
+  .platform__icon {
+    width: 20px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .carousel {
+    gap: 16px;
+    margin: 16px 0;
+  }
+  .carousel__item {
+    aspect-ratio: 0.75;
+    min-height: 560px;
+  }
+  .carousel__item .survey__overlay, .carousel__item .np__overlay, .carousel__item .mega__overlay, .carousel__item .vid__overlay {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    justify-content: flex-end;
+    margin: 0 0 2.5rem 0;
+    padding: 0 1rem;
+    width: 100%;
+  }
+  .carousel__item .jbg, .carousel__item .survey, .carousel__item .np, .carousel__item .mega, .carousel__item .vid {
+    display: none;
+  }
+  .carousel__item .jbg-mobile, .carousel__item .survey-mobile, .carousel__item .np-mobile, .carousel__item .mega-mobile, .carousel__item .vid-mobile {
+    display: block;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    justify-content: center;
+    padding-bottom: 16px;
+  }
+  .carousel__item .vid__overlay {
+    max-width: 340px;
+  }
+  .platform__icon {
+    width: 20px;
+  }
+  .overlay__button {
+    font-size: 0.875rem;
+    font-weight: 800;
+    line-height: 0.875rem;
+  }
+}
+@media screen and (min-width: 960px) and (max-width: 1265px) {
+  .carousel__item .survey__overlay, .carousel__item .np__overlay, .carousel__item .mega__overlay, .carousel__item .vid__overlay {
+    max-width: 320px;
   }
 }
 .about {
@@ -575,10 +921,19 @@
   cursor: pointer;
 }
 .pack__list__img {
-  width: 100%;
-  height: auto;
-  max-height: 150px;
+  max-width: 100%;
+  max-height: 100%;
   object-fit: contain;
+}
+.pack__list__img__wrapper {
+  display: flex;
+  flex-direction: row;
+  gap: 0;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  aspect-ratio: 4/3;
+  background-color: transparent;
 }
 .pack__list__img:hover {
   scale: 1.05;
@@ -643,6 +998,7 @@
 }
 .contact__wrapper {
   background: radial-gradient(76.37% 50% at 50% 50%, #419544 28.89%, #276829);
+  overflow-x: hidden;
 }
 .contact__left {
   max-width: 440px;
@@ -906,7 +1262,6 @@
   }
 }
 .footer {
-  height: 266px;
   padding: 5rem 2.5rem;
 }
 
@@ -939,7 +1294,6 @@
   justify-content: space-between;
   color: #e7eaee;
   text-align: center;
-  padding-top: 1.25rem;
 }
 .copyright__label {
   font-size: 1rem;
@@ -1054,8 +1408,6 @@
   }
 }
 html {
-  width: 100dvw;
-  height: 100dvh;
   font-family: "Inter";
   font-size: 16px;
   background: #000000;
@@ -1067,6 +1419,7 @@ body {
 
 .main__page {
   background: url(/public/bgs/sparkle-bg.png);
+  background-attachment: fixed;
   height: fit-content;
 }
 
