--- a/scss/modules/_pack.scss
+++ b/scss/modules/_pack.scss
@@ -38,9 +38,16 @@
       cursor: pointer;
     }
     &__img {
-      @include size($w: 100%, $h: auto);
-      max-height: 150px;
+      max-width: 100%;
+      max-height: 100%;
       object-fit: contain;
+
+      &__wrapper {
+        @include flex(row, 0, center, center);
+        width: 100%;
+        aspect-ratio: 4 / 3;
+        background-color: transparent;
+      }
 
       &:hover {
         scale: 1.05;
