--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
-@import url(./css/reset.css);
+@import url(./reset.css);
 .logo {
   display: flex;
   flex-direction: row;
@@ -402,36 +401,36 @@
   background: linear-gradient(90deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6) 80%, transparent);
 }
 .carousel__item .jbg {
-  background-image: url("./public/carousel/1.webp");
+  background-image: url("../public/carousel/1.webp");
 }
 .carousel__item .survey {
-  background-image: linear-gradient(-90deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("./public/carousel/2.webp");
+  background-image: linear-gradient(-90deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("../public/carousel/2.webp");
 }
 .carousel__item .np {
-  background-image: linear-gradient(-90deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("./public/carousel/3.webp");
+  background-image: linear-gradient(-90deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("../public/carousel/3.webp");
 }
 .carousel__item .mega {
-  background-image: linear-gradient(-90deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("./public/carousel/4.webp");
+  background-image: linear-gradient(-90deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("../public/carousel/4.webp");
 }
 .carousel__item .jbg-mobile {
   display: none;
-  background-image: url("./public/carousel/1-mobile.webp");
+  background-image: url("../public/carousel/1-mobile.webp");
 }
 .carousel__item .survey-mobile {
   display: none;
-  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("./public/carousel/2-mobile.webp");
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("../public/carousel/2-mobile.webp");
 }
 .carousel__item .np-mobile {
   display: none;
-  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("./public/carousel/3-mobile.webp");
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("../public/carousel/3-mobile.webp");
 }
 .carousel__item .mega-mobile {
   display: none;
-  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("./public/carousel/4-mobile.webp");
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("../public/carousel/4-mobile.webp");
 }
 .carousel__item .vid-mobile {
   display: none;
-  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("./public/carousel/5-mobile.webp");
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.54%, rgba(0, 0, 0, 0.6) 60.18%), url("../public/carousel/5-mobile.webp");
 }
 
 .controls {
@@ -601,7 +600,7 @@
   position: relative;
   z-index: 0;
   max-width: 580px;
-  background-image: url(./public/imgs/cat.webp);
+  background-image: url(../public/imgs/cat.webp);
   background-position: 100% 0;
   background-repeat: no-repeat;
   background-size: cover;
@@ -679,7 +678,7 @@
 .about__mobile__img {
   width: 100%;
   height: 300px;
-  background-image: url(./public/imgs/cat.webp);
+  background-image: url(../public/imgs/cat.webp);
   background-position: 100% 0;
   background-repeat: no-repeat;
   background-size: cover;
@@ -760,7 +759,7 @@
 .blog__wrapper {
   position: relative;
   z-index: 990;
-  background-image: url("./public//bgs/blog_bg.webp");
+  background-image: url("../public//bgs/blog_bg.webp");
 }
 .blog__info {
   color: #e7eaee;
@@ -883,7 +882,7 @@
   color: #e7eaee;
 }
 .pack__wrapper {
-  background-image: url("ю/public/bgs/pack_bg.webp");
+  background-image: url("../public/bgs/pack_bg.webp");
   background-size: 80%;
   background-position: 50%;
   text-align: center;
@@ -1393,6 +1392,7 @@
   }
   .copyright {
     flex-direction: column;
+    padding-top: 0.5rem;
   }
   .copyright__label {
     margin: 0 0 0.625rem 0;
@@ -1419,7 +1419,7 @@ body {
 }
 
 .main__page {
-  background: url("./public/bgs/sparkle-bg.png");
+  background: url("../public/bgs/sparkle-bg.png");
   background-attachment: fixed;
   height: fit-content;
 }
