--- a/scss/modules/_blog.scss
+++ b/scss/modules/_blog.scss
@@ -8,7 +8,7 @@
   &__wrapper {
     position: relative;
     z-index: 990;
-    background-image: url("./public//bgs/blog_bg.webp");
+    background-image: url("../public//bgs/blog_bg.webp");
   }
 
   &__info {
