--- a/scss/modules/_pack.scss
+++ b/scss/modules/_pack.scss
@@ -7,7 +7,7 @@
   color: $white;
 
   &__wrapper {
-    background-image: url("ю/public/bgs/pack_bg.webp");
+    background-image: url("../public/bgs/pack_bg.webp");
     background-size: 80%;
     background-position: 50%;
     text-align: center;
